--- a/chat-room/src/index.css
+++ b/chat-room/src/index.css
@@ -1,21 +1,8 @@
+@import url(//db.onlinewebfonts.com/c/900f8add35323c44ee840c611ed9a7a5?family=Pokemon+Classic);
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@font-face {
-  font-family: "Pokemon Classic";
-  src: url("//db.onlinewebfonts.com/t/900f8add35323c44ee840c611ed9a7a5.eot");
-  src: url("//db.onlinewebfonts.com/t/900f8add35323c44ee840c611ed9a7a5.eot?#iefix")
-      format("embedded-opentype"),
-    url("//db.onlinewebfonts.com/t/900f8add35323c44ee840c611ed9a7a5.woff2")
-      format("woff2"),
-    url("//db.onlinewebfonts.com/t/900f8add35323c44ee840c611ed9a7a5.woff")
-      format("woff"),
-    url("//db.onlinewebfonts.com/t/900f8add35323c44ee840c611ed9a7a5.ttf")
-      format("truetype"),
-    url("//db.onlinewebfonts.com/t/900f8add35323c44ee840c611ed9a7a5.svg#Pokemon Classic")
-      format("svg");
-}
 
 :root {
   line-height: 1.5;
